--- a/package.json
+++ b/package.json
@@ -23,15 +23,17 @@
     "@azure/ng-deploy": "^0.2.3",
     "@popperjs/core": "^2.5.4",
     "@types/jquery": "^3.5.4",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "bootswatch": "^4.5.3",
     "browser-image-compression": "^1.0.14",
+    "chart.js": "^3.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "ng-lazyload-image": "^9.1.0",
     "ng-recaptcha3": "^1.3.1",
+    "ng2-charts": "^2.4.3",
     "ngx-bootstrap": "^6.2.0",
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^13.1.0",
