--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular-devkit/build-angular": "~0.1001.7",
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
+    "@types/chart.js": "^2.9.34",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.20.4",
