--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
     "@angular/router": "~10.1.6",
     "@azure/ng-deploy": "^0.2.3",
     "@popperjs/core": "^2.5.4",
-    "@types/jquery": "^3.5.4",
+    "angular-datatables": "^12.0.0",
     "bootstrap": "^4.6.0",
     "bootswatch": "^4.5.3",
     "browser-image-compression": "^1.0.14",
     "chart.js": "^3.5.1",
+    "datatables.net": "^1.11.2",
+    "datatables.net-dt": "^1.11.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "ng-lazyload-image": "^9.1.0",
     "ng-recaptcha3": "^1.3.1",
@@ -47,8 +49,10 @@
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
     "@types/chart.js": "^2.9.34",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^12.20.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
