--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "chart.js": "^3.5.1",
     "datatables.net": "^1.11.2",
     "datatables.net-dt": "^1.11.2",
+    "datatables.net-select": "^1.3.3",
+    "datatables.net-select-dt": "^1.3.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
@@ -50,6 +52,7 @@
     "@angular/compiler-cli": "~10.1.6",
     "@types/chart.js": "^2.9.34",
     "@types/datatables.net": "^1.10.21",
+    "@types/datatables.net-select": "^1.2.7",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.6",
