--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "allowSyntheticDefaultImports":true,
     "target": "es2015",
     "module": "es2020",
+    "paths": {
+      "primeng/*": ["node_modules/primeng-lts/*"]
+    },
     "lib": [
       "es2018",
       "dom"
